namespace Enset.Domain.DataProducts;

/// <summary>
/// Kennzeichnet den unterstützten fachlichen oder räumlichen Geltungsbereich.
/// </summary>
public enum DataProductScopeType
{
    Unknown = 0,

    Meter = 1,
    EnergySystem = 2,
    Building = 3,

    Quarter = 4,
    Municipality = 5,
    Region = 6,

    Customer = 7,
    EnergyCommunity = 8,

    ChargingPoint = 9,
    ChargingSite = 10,
    Vehicle = 11,
    Fleet = 12
}
