public enum DataQuality
{
    Raw,
    Estimated,
    Validated
}