namespace Enset.Domain.Energy;

public enum MeterDirection
{
    Unknown = 0,

    Consumption = 1,
    Production = 2,
    Bidirectional = 3
}
